somehow tests were skipped

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
         if: runner.os == 'Linux'
         run: make lint
       - name: test
-        if: runner.os != 'Linux'
+        if: runner.os == 'Linux'
         run: make test
 
   build:
