--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,7 +8,7 @@ linters-settings:
     lines: 100
     statements: 50
   gci:
-    local-prefixes: github.com/pomerium/pomerium
+    local-prefixes: github.com/pomerium
   goconst:
     min-len: 2
     min-occurrences: 2
@@ -28,7 +28,7 @@ linters-settings:
   gocyclo:
     min-complexity: 15
   goimports:
-    local-prefixes: github.com/pomerium/pomerium
+    local-prefixes: github.com/pomerium
   govet:
     check-shadowing: false
   lll:
