--- a/config/crd/bases/ingress.pomerium.io_settings.yaml
+++ b/config/crd/bases/ingress.pomerium.io_settings.yaml
@@ -34,6 +34,54 @@ spec:
             type: object
           spec:
             description: SettingsSpec defines the desired state of Settings
+            properties:
+              certificates:
+                description: Certificates is a list of secrets of type TLS to use
+                items:
+                  type: string
+                type: array
+              identity_provider:
+                description: IdentityProvider see https://www.pomerium.com/docs/identity-providers/
+                properties:
+                  provider:
+                    description: Provider one of accepted providers https://www.pomerium.com/reference/#identity-provider-name
+                    type: string
+                  refresh_directory:
+                    description: Specifies refresh settings
+                    properties:
+                      interval:
+                        description: Duration is a sequence of decimal numbers, each
+                          with optional fraction and a unit suffix, such as "300ms",
+                          "-1.5h" or "2h45m". Valid time units are "ns", "us" (or
+                          "µs"), "ms", "s", "m", "h".
+                        type: string
+                      timeout:
+                        description: Duration is a sequence of decimal numbers, each
+                          with optional fraction and a unit suffix, such as "300ms",
+                          "-1.5h" or "2h45m". Valid time units are "ns", "us" (or
+                          "µs"), "ms", "s", "m", "h".
+                        type: string
+                    required:
+                    - interval
+                    - timeout
+                    type: object
+                  scopes:
+                    description: Scopes see https://www.pomerium.com/reference/#identity-provider-scopes
+                    items:
+                      type: string
+                    type: array
+                  secret:
+                    description: Secret refers to a k8s secret containing IdP provider
+                      specific parameters
+                    type: string
+                  url:
+                    description: URL is identity provider url, see https://www.pomerium.com/reference/#identity-provider-url
+                    type: string
+                required:
+                - provider
+                - secret
+                - url
+                type: object
             type: object
           status:
             description: SettingsStatus defines the observed state of Settings
