--- a/config/crd/bases/ingress.pomerium.io_settings.yaml
+++ b/config/crd/bases/ingress.pomerium.io_settings.yaml
@@ -71,7 +71,7 @@ spec:
                     - ping
                     - github
                     type: string
-                  refresh_directory:
+                  refreshDirectory:
                     description: Specifies refresh settings
                     properties:
                       interval:
