--- a/config/crd/bases/ingress.pomerium.io_settings.yaml
+++ b/config/crd/bases/ingress.pomerium.io_settings.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: settings.ingress.pomerium.io
 spec:
@@ -18,7 +18,8 @@ spec:
   - name: v1
     schema:
       openAPIV3Schema:
-        description: Settings is the Schema for the settings API
+        description: Settings define runtime-configurable Pomerium settings that do
+          not fall into the category of deployment parameters
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -34,43 +35,124 @@ spec:
             type: object
           spec:
             description: SettingsSpec defines the desired state of Settings
+            properties:
+              authenticate:
+                description: Authenticate see
+                properties:
+                  callbackPath:
+                    description: CallbackPath see https://www.pomerium.com/reference/#authenticate-callback-path
+                    type: string
+                  url:
+                    description: AuthenticateURL should be publicly accessible URL
+                      the non-authenticated persons would be referred to see https://www.pomerium.com/reference/#authenticate-service-url
+                    format: uri
+                    pattern: ^https://
+                    type: string
+                required:
+                - url
+                type: object
+              certificates:
+                description: Certificates is a list of secrets of type TLS to use
+                items:
+                  type: string
+                type: array
+              identityProvider:
+                description: IdentityProvider see https://www.pomerium.com/docs/identity-providers/
+                properties:
+                  provider:
+                    description: Provider one of accepted providers https://www.pomerium.com/reference/#identity-provider-name
+                    enum:
+                    - auth0
+                    - azure
+                    - google
+                    - okta
+                    - onelogin
+                    - oidc
+                    - ping
+                    - github
+                    type: string
+                  refreshDirectory:
+                    description: Specifies refresh settings
+                    properties:
+                      interval:
+                        format: duration
+                        type: string
+                      timeout:
+                        format: duration
+                        type: string
+                    required:
+                    - interval
+                    - timeout
+                    type: object
+                  requestParams:
+                    additionalProperties:
+                      type: string
+                    description: RequestParams see https://www.pomerium.com/reference/#identity-provider-request-params
+                    type: object
+                  requestParamsSecret:
+                    description: RequestParamsSecret is a reference to a secret for
+                      additional parameters you'd prefer not to provide in plaintext
+                    type: string
+                  scopes:
+                    description: Scopes see https://www.pomerium.com/reference/#identity-provider-scopes
+                    items:
+                      type: string
+                    type: array
+                  secret:
+                    description: Secret refers to a k8s secret containing IdP provider
+                      specific parameters and must contain at least `client_id` and
+                      `client_secret` map values, an optional `service_account` field,
+                      mapped to https://www.pomerium.com/reference/#identity-provider-service-account
+                    minLength: 1
+                    type: string
+                  serviceAccountFromSecret:
+                    description: ServiceAccountFromSecret is a convenience way to
+                      build a value for `idp_service_account` from secret map values,
+                      see https://www.pomerium.com/docs/identity-providers/
+                    type: string
+                  url:
+                    description: URL is identity provider url, see https://www.pomerium.com/reference/#identity-provider-url
+                    format: uri
+                    pattern: ^https://
+                    type: string
+                required:
+                - provider
+                - secret
+                type: object
+            required:
+            - authenticate
+            - identityProvider
             type: object
           status:
             description: SettingsStatus defines the observed state of Settings
             properties:
-              routes:
+              ingress:
                 additionalProperties:
-                  description: RouteStatus reconciliation status between Ingress spec
-                    and Pomerium state
+                  description: RouteStatus provides high level status between the
+                    last observed ingress object and pomerium state
                   properties:
                     error:
                       description: Error is reason most recent reconciliation failed
                         for the route
                       type: string
-                    reconciled:
-                      description: Reconciled is true if Ingress resource was fully
-                        synced with pomerium state
-                      type: boolean
-                    ts:
+                    lastReconciled:
                       description: LastReconciled timestamp indicates when the ingress
                         resource was last synced with pomerium
                       format: date-time
                       type: string
+                    reconciled:
+                      description: Reconciled is true if Ingress resource was fully
+                        synced with pomerium state
+                      type: boolean
                   required:
                   - reconciled
                   type: object
                 type: object
             required:
-            - routes
+            - ingress
             type: object
         type: object
     served: true
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
