--- a/config/pomerium/role_binding.yaml
+++ b/config/pomerium/role_binding.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: controller
+  name: pomerium-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: controller
+  name: pomerium-controller
 subjects:
   - kind: ServiceAccount
-    name: controller
+    name: pomerium-controller
