--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: end-of-file-fixer
         exclude: "(docs/.*|integration/tpl/files/.*)"
       - id: check-yaml
-        exclude: "examples/.*"
+        exclude: "deployment.yaml"
       - id: check-added-large-files
   - repo: https://github.com/syntaqx/git-hooks
     rev: v0.0.17
