make sure pomerium is running as non-root inside a container

--- a/config/pomerium/kustomization.yaml
+++ b/config/pomerium/kustomization.yaml
@@ -3,10 +3,6 @@
 #
 resources:
   - namespace.yaml
-  - deployment.yaml
-  - service_proxy.yaml
-  - service_metrics.yaml
-  - service_account.yaml
-  - role.yaml
-  - role_binding.yaml
-  - ingressclass.yaml
+  - ./ingressclass.yaml
+  - ./deployment
+  - ./service
