--- a/config/pomerium/service/proxy.yaml
+++ b/config/pomerium/service/proxy.yaml
@@ -10,6 +10,6 @@ spec:
       protocol: TCP
       name: https
     - name: http
-      targetPort: 80
+      targetPort: http
       protocol: TCP
       port: 80
