--- a/config/pomerium/deployment/readonly-root-fs.yaml
+++ b/config/pomerium/deployment/readonly-root-fs.yaml
@@ -5,10 +5,15 @@ metadata:
 spec:
   template:
     spec:
+      nodeSelector:
+        kubernetes.io/os: linux
       containers:
         - name: pomerium
           securityContext:
             readOnlyRootFilesystem: true
+          env:
+            - name: TMPDIR
+              value: "/tmp"
           volumeMounts:
             - mountPath: "/tmp"
               name: tmp
