make CRD cluster-scoped

--- a/config/crd/bases/ingress.pomerium.io_pomerium.yaml
+++ b/config/crd/bases/ingress.pomerium.io_pomerium.yaml
@@ -13,7 +13,7 @@ spec:
     listKind: PomeriumList
     plural: pomerium
     singular: pomerium
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1
     schema:
