--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     listKind: PomeriumList
     plural: pomerium
     singular: pomerium
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1
     schema:
@@ -425,7 +425,7 @@ spec:
       containers:
       - args:
         - all-in-one
-        - --pomerium-config=$(POMERIUM_NAMESPACE)/global
+        - --pomerium-config=global
         - --update-status-from-service=$(POMERIUM_NAMESPACE)/pomerium-proxy
         - --metrics-bind-address=$(POD_IP):9090
         env:
