--- a/config/pomerium/deployment/args.yaml
+++ b/config/pomerium/deployment/args.yaml
@@ -9,7 +9,7 @@ spec:
         - name: pomerium
           args:
             - all-in-one
-            - --pomerium-config=$(POMERIUM_NAMESPACE)/global
+            - --pomerium-config=global
             - --update-status-from-service=$(POMERIUM_NAMESPACE)/pomerium-proxy
             - --metrics-bind-address=$(POD_IP):9090
           env:
