more verbose status

--- a/config/pomerium/deployment/readonly-root-fs.yaml
+++ b/config/pomerium/deployment/readonly-root-fs.yaml
@@ -14,6 +14,8 @@ spec:
           env:
             - name: TMPDIR
               value: "/tmp"
+            - name: XDG_CACHE_HOME
+              value: "/tmp"
           volumeMounts:
             - mountPath: "/tmp"
               name: tmp
