--- a/deployment.yaml
+++ b/deployment.yaml
@@ -441,6 +441,8 @@ spec:
       app.kubernetes.io/name: pomerium
   template:
     metadata:
+      annotations:
+        traffic.sidecar.istio.io/excludeInboundPorts: 80,443
       labels:
         app.kubernetes.io/name: pomerium
     spec:
