--- a/deployment.yaml
+++ b/deployment.yaml
@@ -464,7 +464,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
+        image: pomerium/ingress-controller:sha-c34791e
         imagePullPolicy: IfNotPresent
         name: pomerium
         ports:
