--- a/config/pomerium/rbac/role.yaml
+++ b/config/pomerium/rbac/role.yaml
@@ -62,3 +62,12 @@ rules:
     verbs:
       - create
       - patch
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - create
+      - get
+      - patch
+      - update
