--- a/.github/workflows/docker-main.yaml
+++ b/.github/workflows/docker-main.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Docker meta
         id: meta
-        uses: crazy-max/ghaction-docker-meta@v4
+        uses: docker/metadata-action@57396166ad8aefe6098280995947635806a0e6ea
         with:
           # list of Docker images to use as base name for tags
           images: |
