--- a/config/crd/bases/ingress.pomerium.io_pomerium.yaml
+++ b/config/crd/bases/ingress.pomerium.io_pomerium.yaml
@@ -72,7 +72,8 @@ spec:
                     - github
                     type: string
                   refreshDirectory:
-                    description: RefreshDirectory defines IdP directory refresh options
+                    description: RefreshDirectory is no longer supported, please see
+                      https://docs.pomerium.com/docs/overview/upgrading#idp-directory-sync
                     properties:
                       interval:
                         description: interval is the time that pomerium will sync
@@ -108,9 +109,8 @@ spec:
                     minLength: 1
                     type: string
                   serviceAccountFromSecret:
-                    description: ServiceAccountFromSecret is a convenience way to
-                      build a value for `idp_service_account` from secret map values,
-                      see https://www.pomerium.com/docs/identity-providers/
+                    description: ServiceAccountFromSecret is no longer supported,
+                      see https://docs.pomerium.com/docs/overview/upgrading#idp-directory-sync
                     type: string
                   url:
                     description: URL is identity provider url, see https://www.pomerium.com/reference/#identity-provider-url.
@@ -220,6 +220,11 @@ spec:
                       description: Reconciled is whether this object generation was
                         successfully synced with pomerium.
                       type: boolean
+                    warnings:
+                      description: Warnings
+                      items:
+                        type: string
+                      type: array
                   required:
                   - reconciled
                   type: object
@@ -247,6 +252,11 @@ spec:
                     description: Reconciled is whether this object generation was
                       successfully synced with pomerium.
                     type: boolean
+                  warnings:
+                    description: Warnings
+                    items:
+                      type: string
+                    type: array
                 required:
                 - reconciled
                 type: object
