--- a/deployment.yaml
+++ b/deployment.yaml
@@ -148,6 +148,14 @@ spec:
                 - provider
                 - secret
                 type: object
+              jwtClaimHeaders:
+                additionalProperties:
+                  type: string
+                description: JWTClaimHeaders convert claims from the assertion token
+                  into HTTP headers. We recommend you only use it for compatibility
+                  with legacy applications, and use JWT assertion header directly
+                  for new applications, read more at https://www.pomerium.com/docs/topics/getting-users-identity
+                type: object
               secrets:
                 description: Secrets references a Secret that must have the following
                   keys - shared_secret - cookie_secret - signing_key
